Fix minor copy errors + calendar overflow

--- a/src/modules/Contact/Calendar/Calendar.module.scss
+++ b/src/modules/Contact/Calendar/Calendar.module.scss
@@ -3,6 +3,7 @@
 .calendar_container {
   max-width: 663px;
   margin-inline: auto;
+  overflow-x: hidden;
 }
 
 .calendar_animation_grid_background {
